--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <button onclick="toggleHistory()" class="footer-btn">
                     <i class="fas fa-history"></i> Historial
                 </button>
-                <button onclick="toggleTheme()" class="footer-btn">
-                    <i class="fas fa-palette"></i> Tema
+                <button onclick="toggleTheme()" class="footer-btn" id="themeToggleBtn" title="Cambiar tema">
+                    <i class="fas fa-moon" id="themeIcon"></i> <span id="themeText">Oscuro</span>
                 </button>
                 <button onclick="showAbout()" class="footer-btn">
                     <i class="fas fa-info-circle"></i> Acerca de
@@ -210,5 +210,28 @@
     <script src="js/programmer.js"></script>
     <script src="js/memory.js"></script>
     <script src="js/themes.js"></script>
+    <script>
+// Actualiza el icono y texto del botón de tema según el modo actual
+function updateThemeButton() {
+    const isDark = document.body.classList.contains('dark-theme');
+    const icon = document.getElementById('themeIcon');
+    const text = document.getElementById('themeText');
+    if (isDark) {
+        icon.className = 'fas fa-sun';
+        text.textContent = 'Claro';
+    } else {
+        icon.className = 'fas fa-moon';
+        text.textContent = 'Oscuro';
+    }
+}
+// Llama a updateThemeButton al cambiar el tema
+const originalToggleTheme = window.toggleTheme;
+window.toggleTheme = function() {
+    originalToggleTheme();
+    updateThemeButton();
+};
+// Llama a updateThemeButton al cargar la página
+window.addEventListener('DOMContentLoaded', updateThemeButton);
+</script>
 </body>
 </html>
