--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Científica Prototipo</title>
+    <title>Calculadora Científica Profesional</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
         <div class="calculator">
             <!-- Header -->
             <div class="header">
-                <h1><i class="fas fa-calculator"></i> CalcPro</h1>
+                <h1><i class="fas fa-calculator"></i> Calculadora Profesional</h1>
                 <div class="mode-toggle">
                     <button id="basicMode" class="mode-btn active">Básica</button>
                     <button id="scientificMode" class="mode-btn">Científica</button>
