Se modificaron los botones de memoria para hacerlos mas visibles para el usuario

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                     <button id="scientificMode" class="mode-btn">Científica</button>
                     <button id="programmerMode" class="mode-btn">Programador</button>
                 </div>
-            </div>
-
-            <!-- Display -->
+            </div>            <!-- Display -->
             <div class="display-container">
                 <div class="history" id="history"></div>
                 <div class="current-display" id="currentDisplay">0</div>
@@ -59,9 +57,7 @@
                     <button onclick="appendNumber('1')" class="btn number">1</button>
                     <button onclick="appendNumber('2')" class="btn number">2</button>
                     <button onclick="appendNumber('3')" class="btn number">3</button>
-                    <button onclick="appendOperator('+')" class="btn operator">+</button>
-                    
-                    <button onclick="toggleSign()" class="btn function">±</button>
+                    <button onclick="appendOperator('+')" class="btn operator">+</button>                    <button onclick="toggleSign()" class="btn function">±</button>
                     <button onclick="appendNumber('0')" class="btn number">0</button>
                     <button onclick="appendNumber('.')" class="btn number">.</button>
                     <button onclick="calculate()" class="btn equals">=</button>
